--- a/src/main/UI/DashBoard.html
+++ b/src/main/UI/DashBoard.html
@@ -18,7 +18,7 @@
             </tr>
 
             <tr ng-repeat="course in courses">
-                <td><a href="#/{{course.name}}">{{course.name}}</a></td>
+                <td><a href="#/{{course.Id}}">{{course.name}}</a></td>
                 <td>{{course.teacher}}</td>
                 <td>{{course.startDate}}</td>
                 <td>{{course.endDate}}</td>
