--- a/src/main/UI/index.html
+++ b/src/main/UI/index.html
@@ -11,7 +11,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.min.js"></script>
     <script src="..\js\HeyBenApp.js"></script>
-    <script src="..\js\HBDashBoardApp.js"></script>
+    <script src="..\js\HeyBenControllers.js"></script>
+    <script src="..\js\HeyBenDirectives.js"></script>
+    <script src="..\js\HeyBenFactories.js"></script>
 
     <script src="//code.jquery.com/jquery-1.11.3.js"></script>
     <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
