--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HeyBen</title>
+    <script src="vendor.js"></script>
 </head>
 <body>
 <div id="app"></div>
